--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,91 @@
 @tailwind utilities;
 
 
+.airmax-section {
+    padding: 20px;
+    background-color: #f9f9f9;
+  }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  .arrows {
+    display: flex;
+    gap: 10px;
+  }
+
+  .shop{
+    font-size: 20px;
+  }
+  .arrow {
+    background-color: #f5f5f5;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .arrow:hover {
+    background-color: darkgray;
+  }
+  .arrow:nth-child(2) {
+    background-color: #e5e5e5;
+  }
+  .mySwiper {
+    position: relative;
+  }
+  .card {
+    text-align: center;
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: white;
+    transition: transform 0.3s ease;
+  }
+  .card:hover {
+    transform: translateY(-10px);
+  }
+  img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+  .price {
+    /* color: #ff0000; */
+    font-weight: bold;
+  }
+
+  /* Responsive Styles */
+  @media (max-width: 1024px) {
+    .mySwiper {
+      .swiper-slide {
+        width: 80%;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    .mySwiper {
+      .swiper-slide {
+        width: 100%;
+      }
+    }
+    .header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    h2 {
+      font-size: 1.2rem;
+    }
+    .arrows {
+      justify-content: center;
+      gap: 15px;
+    }
+  }
